--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,12 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "http://username.github.io"
+#url: "http://sfu-omics.github.io"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
-#url: "http://username.github.io/projectname"
-#baseurl: "/projectname"
+url: "http://sfu-omics.github.io/projectname"
+baseurl: "/sfu-omics.github.io"
 
 # Of course don't forget to change the username and projectname to YOUR username and project
 
