--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ avatar: "/img/avatar-icon.png"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#7FFFD4"
+navbar-col: "#66CDAA"
 navbar-text-col: "#404040"
 navbar-children-col: "#F5F5F5"
 page-col: "#FFFFFF"
